Fixing the invited interview feature